static/css/base.css
/* ... */
.cart-item .remove-item i {
    position: absolute;
    top: 0;
    right: 10px;
}

.qty-btn .decrement-qty,
.qty-btn .increment-qty {
    width: 28px;
    height: 28px;
    vertical-align: middle;
    font-size: 20px;
    background-image: linear-gradient(to right, #18385E 0%, #42AFAA  51%, #18385E  100%);
    background-size: 200% auto;
    border-radius: 50%;
    border: 2px solid #00FBEF;
    cursor: pointer;
}

.qty-btn .qty-val {
    font-family: 'AgencyCYB' !important;
    font-size: 18px !important;
    vertical-align: middle;
    text-align: center;
    color: #FFFFFF;
    border: none !important;
    margin-bottom: 0 !important;
}

.update-qty {
    display: none;
}

#shoppingCartNav .sidenav-footer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: #0A2033;
    padding-top: 25px;
    padding-bottom: 80px;
}

/* ======================================================
Parallax and image styles
====================================================== */

#firstParallax {
    height: 80vh;
}

.parallax-container {
    height: 65vh;
}

.parallax img {
    object-fit: cover;
    opacity: 1 !important;
}

.img-overlay {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    background-color: rgba(0, 0, 0, 35%);
    z-index: 1;
}

/* ======================================================
Games page styles
====================================================== */

.game-img-container {
    position: relative;
    width: 435px;
    height: 425px;
    margin: auto;
    cursor: pointer;
}

.game-page-img {
    display: block;
    width: 435px;
    height: 425px;
    object-fit: cover;
}

.game-img-overlay {
    position: absolute;
    top: 0;
    left: 0;
}

.btn-folded-corners.img-overlay-btn {
    clip-path: polygon(0 0, 100% 0, 100% 30%, 100% 55%, 90% 100%, 30% 100%, 0 100%, 0 50%);
}

/* The following code is based upon this source:
'https://www.w3schools.com/css/tryit.asp?filename=trycss_css_image_overlay_slideleft' */

.game-img-overlay {
    width: 0;
    transition: .8s ease;
    overflow: hidden;
}

.game-img-container:hover .game-img-overlay {
    width: 35%;
}

.game-img-overlay .btn-text {
    white-space: nowrap; 
    position: absolute;
    overflow: hidden;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
}

.btn-cyan.btn-folded-corners.img-overlay-btn .border-hack {
    clip-path: polygon(0 0, 100% 0, 100% 30%, 100% 55%, 90% 100%, 30% 100%, 0 100%, 0 50%);
}

.game-details-btn {
    width: 165px;
    height: 45px;
}

/* ======================================================
Game details styles
====================================================== */

.game-details-img {
    width: 325px;
    height: 395px;
    object-fit: cover;
}

.select-edition {
    text-align: left;
    margin-left: 0;
}

.edition-btn {
    width: 375px;
    height: 30px;
    margin: 5px auto;
    margin-left: 15px;
    clip-path: polygon(0 0, 100% 0, 100% 30%, 100% 55%, 90% 100%, 30% 100%, 0 100%, 0 50%);
}

.edition-btn .btn-text {
    position: absolute;
    left: 15px;
    font-family: 'SFCovington' !important;
    font-size: 18px !important;
    letter-spacing: 1px !important;
    text-transform: none !important;
}

.btn-cyan.btn-folded-corners.edition-btn .border-hack {
    clip-path: polygon(0 0, 100% 0, 100% 30%, 100% 55%, 90% 100%, 30% 100%, 0 100%, 0 50%);
}

#gameDetails h4 {
    margin-bottom: 0;
}

.cover-and-editions h6 {
    font-family: 'SFCovington';
    letter-spacing: 1px;
    padding-left: 15px;
}

.helper-text {
    margin-top: 10px;
}

.edition-desc {
    width: 80%;
    margin: 10px auto;
}

.section-header {
    margin: 65px auto 45px;
}

/* ======================================================
Adoption page styles
====================================================== */

#allAdoptions .card {
    max-width: 460px;
    background: #122439;
    padding: 20px;
    margin: 35px auto;
    border-radius: 10px;
}

#allAdoptions .card-title {
    margin-bottom: 25px;
}

#allAdoptions .card-image {
    position: relative;
    width: 100%;
    height: 300px;
    margin: auto;
}

#allAdoptions .contrast-card {
    width: 250px;
    height: 265px;
    position: absolute;
    top: 0;
    left: 0;
    background-color: #6713D2; /* fallback color */
    background-image: linear-gradient(to bottom, #6713D2 0%, #CC208E  50%);
    background-size: cover;
    border: 1px solid rgba(66, 175, 170, 75%);
    border-radius: 5px;
}

#allAdoptions .img-card {
    position: absolute;
    top: 40px;
    left: 50%;
    transform: translate(-50%, 0);
}

#allAdoptions .img-card img {
    width: 285px;
    height: 260px;
    object-fit: cover;
    border-radius: 10px; 
    margin: auto;
    border: 2px solid #42AFAA;
}

/* ======================================================
Adopt an animal page styles
====================================================== */

#adoptionPackages .header-container {
    background-color: #0A2033;
}

.animal-details-img {
    width: 99vw;
    height: 75vh;
    object-fit: cover;
}

#adoptAnimal .hero-image {
    position: relative;
}

#adoptAnimal .hero-image .overlay {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgb(0, 0, 0, 35%);
}

#adoptAnimal .hero-text {
    position: absolute;
    top: 65%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#adoptAnimal .btn-folded-corners {
    width: 225px;
}

#adoptAnimal .btn-folded-corners span {
    font-size: 18px !important;
}

#adoptionPackages .purchase-btn,
#gameEditions .purchase-btn {
    width: auto !important;
    padding: 0 32px !important;
}

#adoptionPackages .purchase-btn span,
#gameEditions .purchase-btn span {
    font-size: 28px !important;
    padding-left: 15px;
}
/* ... */

